<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_12_colorfill_background"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/RobotoRegular20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_device"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/deviceIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/device_ID"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/addDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:backgroundTint="@color/colorFill1"
        android:text="@string/add"
        android:textColor="@color/colorFill1Reverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceIdEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
