<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFillBackground">

    <Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/RobotoRegular24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration" />

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarView">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:hint="@string/name"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:autofillHints="Surname"
            android:hint="@string/surname"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:autofillHints="Phone"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/organisationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:autofillHints="Organisation"
            android:hint="@string/organisation"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true" />


        <androidx.cardview.widget.CardView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:backgroundTint="@color/colorFill1"
            app:cornerRadius="@dimen/dp_20">

            <TextView
                style="@style/RobotoRegular16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_16"
                android:text="@string/action_register_short"
                android:textColor="@color/colorFill1Reverse" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>