<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFillBackground"
    tools:context=".ui.home.settings.SettingsFragment">

    <Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/RobotoRegular28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/modeContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbarView">

        <TextView
            style="@style/RobotoRegular20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ui_mode" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
            android:id="@+id/modeToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_12"
            app:toggle_requiredAmount="1"
            app:toggle_selectAnimation="none"
            app:toggle_selectableAmount="1">

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/systemButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/system"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/dayButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/day"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/nightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/night"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

        </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/langContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/modeContainer">

        <TextView
            style="@style/RobotoRegular20sp"
            android:layout_width="@dimen/dp_96"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/language" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
            android:id="@+id/langToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="center_vertical"

            android:layout_marginStart="@dimen/dp_12"
            app:toggle_requiredAmount="1"
            app:toggle_selectAnimation="none"
            app:toggle_selectableAmount="1">

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/kazButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:text="@string/kaz"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/rusButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:text="@string/ru"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                android:id="@+id/engButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:text="@string/eng"
                app:toggle_backgroundColor="@color/whiteStable"
                app:toggle_btnCornerRadius="@dimen/dp_8"
                app:toggle_selectedBackgroundColor="@color/colorFill1Stable"
                app:toggle_selectedTextColor="@color/whiteStable"
                app:toggle_textColor="@color/colorFill1Stable" />

        </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/personalSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/langContainer">

        <Button
            android:id="@+id/changePassword"
            style="@style/RobotoMedium16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorFill1"
            android:padding="@dimen/dp_16"
            android:text="@string/change_passwd"
            android:textColor="@color/colorFill1Reverse" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>