<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.airquality.ui.home.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action android:id="@+id/home_to_login"
            app:destination="@+id/loginFragment"/>

        <action android:id="@+id/home_to_settings"
            app:destination="@+id/settingsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.airquality.ui.maps.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_useful_info"
        android:name="com.example.airquality.ui.usefulInfo.UsefulInfoFragment"
        android:label="@string/title_useful"
        tools:layout="@layout/fragment_useful_info" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.airquality.ui.home.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">

        <action android:id="@+id/login_to_register"
            app:destination="@id/registerFragment" />

    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.airquality.ui.home.login.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.airquality.ui.home.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>